objects/copado__Data_Template__c.object
<CustomObject>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Attachment_Options__c</fullName>
        <label>Attachment Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Attachments</fullName>
                    <default>true</default>
                    <label>No Attachments</label>
                </value>
                <value>
                    <fullName>Insert Attachments</fullName>
                </value>
                <value>
                    <fullName>Upsert Attachments</fullName>
                </value>
                <value>
                    <fullName>Replace Attachments</fullName>
                </value>
                <value>
                    <fullName>Remove Attachments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Continue_on_Error__c</fullName>
        <label>Continue on Error</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continue deployment until blocker issue</fullName>
                    <default>true</default>
                    <label>Continue deployment until blocker issue</label>
                </value>
                <value>
                    <fullName>Stop deployment on first issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Filter_Logic__c</fullName>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Main_Object__c</fullName>
        <label>Main Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Match_Owners__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match Owners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Match_Record_Type__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Max_Record_Limit__c</fullName>
        <label>Max. Record Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Template_Source_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source Org</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Data Templates</relationshipLabel>
        <relationshipName>Data_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Data Template</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Active__c</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Template_Source_Org__c</columns>
        <columns>copado__Max_Record_Limit__c</columns>
        <columns>copado__Batch_Size__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Data Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>